--- a/Fichier_ENS.ipynb
+++ b/Fichier_ENS.ipynb
@@ -73,7 +73,6 @@
       "outputs": [],
       "source": [
         "# Load the train labels\n",
-        "# Note the transpose!\n",
         "data_dir = Path(\"drive/MyDrive/Raidium - Challenge data 2023/\")\n",
         "labels_train = pd.read_csv(data_dir  / \"Y_train2.csv\", index_col=0).T"
       ]
@@ -482,9 +481,7 @@
       ],
       "source": [
         "# Compute the metric on the validation set\n",
-        "rand_index_dataset(labels_val, labels_val_predicted_felzenszwalb.sample(200))\n",
-        "\n",
-        "# As planned, it is awfully awful"
+        "rand_index_dataset(labels_val, labels_val_predicted_felzenszwalb.sample(200))"
       ]
     },
     {
@@ -493,7 +490,7 @@
         "id": "RW68ZY_P5kqv"
       },
       "source": [
-        "##A chier mais si on essaye de corriger les paramètres"
+        "# As planned, it is awfully awful"
       ]
     },
     {
@@ -675,11 +672,18 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Well eventually the score is still catastrophic, let's move to another algorithm !"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "wU9Y0YrNekiH"
       },
       "source": [
-        "### Let's try a Unet structure !"
+        "## Let's try a Unet structure !"
       ]
     },
     {
@@ -754,7 +758,7 @@
         "        self.enc2 = Block(filters, 2*filters)\n",
         "        self.enc3 = Block(2*filters, 4*filters)\n",
         "        self.enc4 = Block(4*filters, 8*filters)\n",
-        "        self.enc5 = Block(8*filters, 16*filters) #minimal dimension space\n",
+        "        self.enc5 = Block(8*filters, 16*filters) \n",
         "\n",
         "# ---- We define the transpose convolution, that does up pooling 2x2 (inverse of maxpooling)\n",
         "\n",
@@ -1071,16 +1075,14 @@
         "id": "VjgBfYXJtlxC"
       },
       "source": [
-        "#### Well it's bad but it is an unoptimized Unet-like algorithm so let's stay hopeful !"
+        "### Well it's bad but it is an unoptimized Unet-like algorithm so let's stay hopeful !"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 1,
+      "cell_type": "markdown",
       "metadata": {
         "id": "umvQaq4bi78D"
       },
-      "outputs": [],
       "source": [
         "## Let's see its overall score"
       ]
@@ -1132,10 +1134,10 @@
         "    Unet_model.eval()  # Set the model to evaluation mode\n",
         "    predictions_list = []\n",
         "    with torch.no_grad():  # Disable gradient calculation\n",
-        "        for data_slice in tqdm(dataset): # Add batch dimension\n",
+        "        for data_slice in tqdm(dataset): \n",
         "            output = Unet_model(data_slice)\n",
-        "            _, predicted = torch.max(output, 1)  # Get the index of the max log-probability\n",
-        "            predictions_list.append(predicted.squeeze().cpu().numpy())  # Remove batch dim and move to cpu\n",
+        "            _, predicted = torch.max(output, 1)  \n",
+        "            predictions_list.append(predicted.squeeze().cpu().numpy())  \n",
         "    return np.stack(predictions_list, axis=0)\n",
         "\n",
         "# Compute predictions on the validation set\n",
@@ -1163,7 +1165,7 @@
         "id": "9Ree-GnKScko"
       },
       "source": [
-        "# Let's do something cleaner now for our Unet-like algo !"
+        "## Let's do something cleaner now for our Unet-like algo !"
       ]
     },
     {
@@ -1178,8 +1180,6 @@
         "\n",
         "# Dataset for the entire data\n",
         "full_train = TensorDataset(X_train_399, Y_train_399)\n",
-        "\n",
-        "# Splitting the dataset into training and validation\n",
         "train_size = int(0.8 * len(full_train))\n",
         "val_size = len(full_train) - train_size\n",
         "train_dataset, val_dataset = random_split(full_train, [train_size, val_size])"
@@ -1193,7 +1193,7 @@
       },
       "outputs": [],
       "source": [
-        "Unet_model2 = Unet(k=106, in_channels=1, filters=64)  # Set k to 106 for 106 classes\n",
+        "Unet_model2 = Unet(k=106, in_channels=1, filters=64)  \n",
         "Unet_model2 = Unet_model2.to(device)\n",
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = optim.Adam(Unet_model2.parameters(), lr=1e-4, weight_decay=1e-8, foreach=True) # Best parameters I found after several tries"
@@ -1211,8 +1211,7 @@
         "\n",
         "train_data = TensorDataset(X_train_399, Y_train_399)\n",
         "trainloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=0)\n",
-        "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=0)\n",
-        "#testloader = torch.utils.data.DataLoader(data_test, batch_size=batch_size,shuffle=False, num_workers=2)"
+        "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=0)"
       ]
     },
     {
@@ -1419,12 +1418,11 @@
         }
       ],
       "source": [
-        "\n",
         "def compute_predictions(dataset):\n",
         "    Unet_model2.eval()\n",
         "    predictions_list = []\n",
         "    with torch.no_grad():\n",
-        "        for data_slice in tqdm(dataset):  # Iterate over the dataset\n",
+        "        for data_slice in tqdm(dataset):  \n",
         "            data_slice = data_slice.unsqueeze(0)\n",
         "            data_slice = data_slice.to(device)\n",
         "            output = Unet_model2(data_slice)\n",
@@ -1494,7 +1492,6 @@
         "    output = Unet_model2(data_sample)\n",
         "    _, predicted = torch.max(output, 1)\n",
         "\n",
-        "# Move tensors to CPU for plotting\n",
         "data_sample_cpu = data_sample.squeeze().cpu()  # Remove batch dimension and move to CPU\n",
         "label_sample_cpu = Y_train_399[2].cpu()\n",
         "predicted_cpu = predicted.squeeze().cpu()  # Remove batch dimension and move to CPU\n",
@@ -1517,16 +1514,20 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {
         "id": "1zSSzfNGgT0M"
       },
-      "outputs": [],
       "source": [
-        "# Well of course that it is bad, what were you expecting from a 0.26 rand score !!\n",
-        "# At least we improved greatly our initial score and we see the beginning of a good recognition pattern from our algorithm\n",
-        "# I eventually ran out of Colab pro credits and without their GPUs I can't run any more examples... But it was fun to try !"
+        "#### Well of course that it is bad, what were you expecting from a 0.26 rand score !!\n",
+        "#### At least we improved greatly our initial score and we see the beginning of a good recognition pattern from our algorithm"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### I eventually ran out of Colab pro credits and without their GPUs I can't run any more examples... But it was fun to try !"
       ]
     }
   ],
